tests/miniJava/neg/000211_mutation.MiniJava
class java { public static true void Main ( String [ ] java ) { { } } }
